sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: illegal start of simple pattern
  for(int i = 0; i < nbValue; i++){
            ^AlgBubbleSort1:5: error: '<-' expected but ';' found.
  for(int i = 0; i < nbValue; i++){
               ^AlgBubbleSort1:5: error: '<-' expected but ';' found.
  for(int i = 0; i < nbValue; i++){
                            ^AlgBubbleSort1:5: error: illegal start of simple pattern
  for(int i = 0; i < nbValue; i++){
                                 ^AlgBubbleSort1:8: error: illegal start of simple expression
}
^