sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var nbValue = getValueCount();
  
  for(int i = 0; i < nbValue; i++){
    
  }
}
